Diary Page - fixing 1000 z-index level

--- a/css/diary-view.css
+++ b/css/diary-view.css
@@ -56,7 +56,7 @@
     background-color: #fff;
     border-color: #ccc;
     position: absolute;
-    z-index: 1000;
+    z-index: 500;
     left: 23%;
     top: 100px;
 }
@@ -88,7 +88,7 @@
     margin: auto;
     text-align: center;
     left: 45%;
-    z-index: 1000;
+    z-index: 500;
 }
 
 /* View Occludded Buttons  */
@@ -199,7 +199,7 @@
     border-bottom: 1px solid lightgray;
     text-align: center;
     background: white;
-    z-index: 1000;
+    z-index: 500;
     white-space: nowrap;
 }
 
